add vue-api, vue-config

--- a/src/guideline.tex
+++ b/src/guideline.tex
@@ -5,28 +5,6 @@
 
 
 
-\section{mood}
-
-
-\subsection{normal}
-
-
-\subsection{emphasis}
-
-
-\subsection{blue}
-
-
-\subsection{success}
-
-
-
-
-\subsection{warning}
-
-
-
-\subsection{danger}
 
 \chapter{btn}
 
@@ -70,11 +48,137 @@
 \end{lstlisting}
 
 
+\section{icon}
 
+\subsection{i-arrow-up}
+
+
+\subsection{i-arrow-down}
+
+\subsection{i-arrow-left}
+
+\subsection{i-arrow-right}
+
+\subsection{i-bin}
+
+
+\subsection{i-check}
+
+\subsection{i-cog}
+
+
+\subsection{i-cross}
+
+\subsection{i-enter}
+
+\subsection{i-face-cool}
+
+\subsection{i-face-cry}
+
+
+\subsection{i-image}
+
+
+\subsection{i-new-tab}
+
+
+\subsection{i-pencil}
+
+
+\subsection{i-plus}
+
+
+\subsection{i-search}
+
+\subsection{i-sort}
+
+\subsection{i-star-empty}
+
+
+\subsection{i-star-full}
+
+
+\subsection{i-undo}
+
+
+\subsection{i-upload}
+
+
+
+
+
+
+
+
+
+
+
+
+\section{text}
+
+
+
+
+\section{mood}
+
+
+\subsection{normal}
+
+
+\subsection{emphasis}
+
+
+\subsection{blue}
+
+
+\subsection{success}
+
+
+
+
+\subsection{warning}
+
+
+
+\subsection{danger}
+
+\chapter{icon}
+
+
+\section{icon.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
+<template>
+  <i class="icon" :class="[name]">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+         viewBox="0 0 1040 1040"
+         width="100%"
+         height="100%">
+      <path :fill="color" :d="icons[name]">
+    </svg>
+  </i>
+</template>
 
+<style scoped>
+  .icon { position: relative; display: inline-block; vertical-align: top; width: 20px; height: 20px; overflow: hidden; }
+  .icon > svg { display: block; }
+</style>
+
+<script>
+  import icons from 'icons';
+  export default {
+    props: {
+      name: String,
+      color: String
+    },
+    data () {
+      return {
+        icons: icons
+      };
+    }
+  };
+</script>
 \end{lstlisting}
 
 
