--- a/src/vue-api.tex
+++ b/src/vue-api.tex
@@ -62,7 +62,7 @@ new Profile().$mount('#mount-point')
 \begin{compactitem}
 \item \texttt{\{Function\} [callback]}
 \item \texttt{\{Object [context]\}}
-\end{compactitem}•
+\end{compactitem}
 
 \begin{lstlisting}[language=JavaScript]
 // 修改数据
