--- a/src/vuenotes.tex
+++ b/src/vuenotes.tex
@@ -287,6 +287,10 @@ morestring=[b]",
 
 \include{vue-binding}
 
+\include{vue-directive}
+
+\include{vue-element}
+
 \include{component}
 
 \include{reactivity}
