--- a/src/ecmascript.tex
+++ b/src/ecmascript.tex
@@ -612,7 +612,7 @@ let x;
 > typeof undeclared_variable // "undefined"
 \end{lstlisting}
 
-上面代码中，undeclared_variable是一个不存在的变量名，结果返回“undefined”。所以，在没有let之前，typeof运算符是百分之百安全的，永远不会报错。现在这一点不成立了。这样的设计是为了让大家养成良好的编程习惯，变量一定要在声明之后使用，否则就报错。
+上面代码中，undeclared\_variable是一个不存在的变量名，结果返回“undefined”。所以，在没有let之前，typeof运算符是百分之百安全的，永远不会报错。现在这一点不成立了。这样的设计是为了让大家养成良好的编程习惯，变量一定要在声明之后使用，否则就报错。
 
 有些“死区”比较隐蔽，不太容易发现。
 
